# cane-personality

./: LICENSE  README.md  generate_charts.py  pyproject.toml  run_baselines.py  run_local_baseline.py  train_dpo.py
baselines/: deepseek_v3.json  deepseek_v3_dpo.jsonl  intellect3.json  intellect3_dpo.jsonl  olmo2.json  olmo2_dpo.jsonl  qwen25.json  qwen25_7b.json  qwen25_7b_dpo.json  qwen25_7b_dpo.jsonl  qwen25_dpo.jsonl  trinity_large_thinking.json
cane_personality/: __init__.py  cli.py  compare.py  export.py  judge.py  profiler.py  report.py  traits.py  types.py
cane_personality/suites/: default.yaml
tests/: test_cli.py  test_profiler.py
